hubSide/force-app/main/default/objects/Case/fields/TECH_NumberIndemValid__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberIndemValid__c</fullName>
    <label>TECH_NumberIndemValid</label>
    <summaryFilterItems>
        <field>Mouvements_financiers__c.Statut__c</field>
        <operation>equals</operation>
        <value>Validé</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Mouvements_financiers__c.Cout_choisi__c</field>
        <operation>notEqual</operation>
        <value>Règlement par le client</value>
    </summaryFilterItems>
    <summaryForeignKey>Mouvements_financiers__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>