hubSide/force-app/main/default/objects/Case/fields/TECH_NumberTaskChoixClient__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberTaskChoixClient__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Use to count the number of task choix client is created (manage in buton new action)</description>
    <label>TECH_NumberTaskChoixClient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>