hubSide/force-app/main/default/objects/Case/fields/TECH_NumberTaskChoixClientClosed__c.field-meta.xml
<CustomField>
    <fullName>TECH_NumberTaskChoixClientClosed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Use to count number task choix client closed</description>
    <label>TECH_NumberTaskChoixClientClosed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>