hubSide/force-app/main/default/objects/Case/fields/tech_numsin__c.field-meta.xml
<CustomField>
    <fullName>tech_numsin__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Champ technique servant à la numérotation des dossiers qui doit garantir sinistre doit garantir :
- l&apos;unicité (aucun doublon)
- la chronologie des numéros (format du numéro de sinistre: SINXXXXXX, &quot;SIN&quot; préfixe invariable et &quot;XXXXXX&quot; séquence incrémentale et choronologique sur 6 chiffres
- la séquentialité (pas de numéro manquant)</description>
    <label>tech_numsin</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>