hubSide/force-app/main/default/objects/Case/fields/TECH_StorePremium__c.field-meta.xml
<CustomField>
    <fullName>TECH_StorePremium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Renvoie en lookup vers le magasin choisi par le client pour prime d&apos;échange</description>
    <label>Magasin</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Distributeur location</value>
        </filterItems>
        <filterItems>
            <field>Account.StorePremiumEligible__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>