hubSide/force-app/main/default/objects/Case/fields/TECH_StorePremiumAddress__c.field-meta.xml
<CustomField>
    <fullName>TECH_StorePremiumAddress__c</fullName>
    <description>Shipping adresse du magasin pour échange prime choisi par le client</description>
    <formula>TECH_StorePremium__r.ShippingStreet +&apos; &apos;+ TECH_StorePremium__r.ShippingCity +&apos; &apos;+ TECH_StorePremium__r.ShippingState +&apos; &apos;+ TECH_StorePremium__r.ShippingPostalCode +&apos; &apos;+ TECH_StorePremium__r.ShippingCountry</formula>
    <label>Adresse magasin</label>
    <type>Text</type>
</CustomField>