hubSide/force-app/main/default/objects/Case/fields/TECH_StorePremiumEmail__c.field-meta.xml
<CustomField>
    <fullName>TECH_StorePremiumEmail__c</fullName>
    <description>Email du magasin pour échange prime choisi par le client</description>
    <formula>TECH_StorePremium__r.vlocity_ins__Email__c</formula>
    <label>TECH_StorePremiumEmail</label>
    <type>Text</type>
</CustomField>