hubSide/force-app/main/default/objects/Case/fields/TECH_StorePremiumName__c.field-meta.xml
<CustomField>
    <fullName>TECH_StorePremiumName__c</fullName>
    <description>Nom du magasin choisi pour échange prime</description>
    <formula>TECH_StorePremium__r.Name</formula>
    <label>TECH_StorePremiumName</label>
    <type>Text</type>
</CustomField>