hubSide/force-app/main/default/objects/Case/fields/TechCaseRedactor__c.field-meta.xml
<CustomField>
    <fullName>TechCaseRedactor__c</fullName>
    <description>Personne ayant réalisé la saisie initiale du dossier de réclamation. (champ technique utilisé lors des insertions par un système externe)</description>
    <label>Dossier saisi par</label>
    <length>255</length>
    <type>Text</type>
</CustomField>