hubSide/force-app/main/default/objects/Case/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Thème principal de la réclamation</description>
    <label>Thème</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InternalSubscription</fullName>
                <label>Souscription Interne</label>
            </value>
            <value>
                <fullName>ExternalSubscription</fullName>
                <label>Souscription Externe</label>
            </value>
            <value>
                <fullName>Termination</fullName>
                <label>Résiliation</label>
            </value>
            <value>
                <fullName>Sinister</fullName>
                <label>Sinistre</label>
            </value>
            <value>
                <fullName>Gestion du Contrat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>