hubSide/force-app/main/default/objects/Case/fields/TotalAmountClaimElements__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountClaimElements__c</fullName>
    <description>Montant total de toutes les lignes d&apos;élément concerné associées à cette réclamation</description>
    <label>Montant total éléments concernés</label>
    <summarizedField>ClaimElement__c.Amount__c</summarizedField>
    <summaryForeignKey>ClaimElement__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>