hubSide/force-app/main/default/objects/Case/fields/Transmitter__c.field-meta.xml
<CustomField>
    <fullName>Transmitter__c</fullName>
    <defaultValue>IF(AND($Profile.Name = &apos;SFAM Qualité&apos;,  $RecordType.DeveloperName = &apos;Reclamation&apos; ),
&apos;Client&apos;,
&apos;&apos;)</defaultValue>
    <description>Typologie du déclarant</description>
    <label>Emetteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
                <default>true</default>
                <label>Adhérent</label>
            </value>
            <value>
                <fullName>Acpr</fullName>
                <label>ACPR</label>
            </value>
            <value>
                <fullName>Asf</fullName>
                <label>ASF</label>
            </value>
            <value>
                <fullName>ConsumerAssociations</fullName>
                <label>Association de consommateur</label>
            </value>
            <value>
                <fullName>Lawyer</fullName>
                <label>Avocat</label>
            </value>
            <value>
                <fullName>Insurer</fullName>
                <label>Assureur</label>
            </value>
            <value>
                <fullName>JusticialConciliator</fullName>
                <label>Conciliateur de justice</label>
            </value>
            <value>
                <fullName>Curator</fullName>
                <label>Curateur</label>
            </value>
            <value>
                <fullName>Ddpp</fullName>
                <label>DDPP</label>
            </value>
            <value>
                <fullName>Dgsfp</fullName>
                <label>DGSFP</label>
            </value>
            <value>
                <fullName>NationalGendarmeriePolice</fullName>
                <label>Gendarmerie - Police</label>
            </value>
            <value>
                <fullName>CourtBailiff</fullName>
                <label>Huissier de justice</label>
            </value>
            <value>
                <fullName>Jurisdiction</fullName>
                <label>Juridiction</label>
            </value>
            <value>
                <fullName>InsuranceMediator</fullName>
                <label>Médiateur des Assurances</label>
            </value>
            <value>
                <fullName>Medycis</fullName>
            </value>
            <value>
                <fullName>Notary</fullName>
                <label>Notaire</label>
            </value>
            <value>
                <fullName>Omic</fullName>
                <label>OMIC</label>
            </value>
            <value>
                <fullName>RegionalPublicBoard</fullName>
                <label>Organisme public régional</label>
            </value>
            <value>
                <fullName>LegalProtection</fullName>
                <label>Protection juridique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>