hubSide/force-app/main/default/objects/Case/fields/TreatmentDate__c.field-meta.xml
<CustomField>
    <fullName>TreatmentDate__c</fullName>
    <description>Date à laquelle le dossier à été traité</description>
    <label>Date de traitement</label>
    <type>Date</type>
</CustomField>