hubSide/force-app/main/default/objects/Case/fields/Typologie_SAV__c.field-meta.xml
<CustomField>
    <fullName>Typologie_SAV__c</fullName>
    <description>Typologie du SAV déclaré</description>
    <label>Typologie du SAV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ReturnedByCarrier</fullName>
                <label>Retour transporteur</label>
            </value>
            <value>
                <fullName>LostByCarrier</fullName>
                <label>Perte transporteur</label>
            </value>
            <value>
                <fullName>DysfonctionsAfterRepair</fullName>
                <label>Dysfonctionnement suite à réparation</label>
            </value>
            <value>
                <fullName>DysfonctionsAfterExchange</fullName>
                <label>Dysfonctionnement suite à échange</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>