hubSide/force-app/main/default/objects/Case/fields/Typologie_Sinistre__c.field-meta.xml
<CustomField>
    <fullName>Typologie_Sinistre__c</fullName>
    <label>Typologie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Typologie</valueSetName>
    </valueSet>
</CustomField>