hubSide/force-app/main/default/objects/Case/fields/WebScreenProgress__c.field-meta.xml
<CustomField>
    <fullName>WebScreenProgress__c</fullName>
    <description>Track the progress of the user on the web site in order to know in which screen the user finished the claim process</description>
    <label>Web screen progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WebScreenProgress</valueSetName>
    </valueSet>
</CustomField>