hubSide/force-app/main/default/objects/Case/recordTypes/Affectation_document.recordType-meta.xml
<RecordType>
    <fullName>Affectation_document</fullName>
    <active>true</active>
    <businessProcess>Affectation Document</businessProcess>
    <description>Record type pour l&apos;affectation manuelle des documents sans case associé.</description>
    <label>Affectation document</label>
</RecordType>