hubSide/force-app/main/default/objects/Case/recordTypes/Declaration.recordType-meta.xml
<RecordType>
    <fullName>Declaration</fullName>
    <active>true</active>
    <businessProcess>Declaration Web</businessProcess>
    <label>Déclaration</label>
</RecordType>