hubSide/force-app/main/default/objects/Case/recordTypes/Demande.recordType-meta.xml
<RecordType>
    <fullName>Demande</fullName>
    <active>true</active>
    <businessProcess>Demande</businessProcess>
    <description>Demande relative à de nouveaux documents client</description>
    <label>Demande</label>
</RecordType>