hubSide/force-app/main/default/objects/Case/recordTypes/Reclamation.recordType-meta.xml
<RecordType>
    <fullName>Reclamation</fullName>
    <active>true</active>
    <businessProcess>Reclamation</businessProcess>
    <description>Record Type pour les dossiers de réclamation</description>
    <label>Réclamation</label>
</RecordType>