hubSide/force-app/main/default/objects/Case/recordTypes/SAV.recordType-meta.xml
<RecordType>
    <fullName>SAV</fullName>
    <active>true</active>
    <businessProcess>SAV</businessProcess>
    <description>Case créé après un sinistre, dans le cas où l&apos;équipement sinistré n&apos;ait pas été correctement réparé/remplacé.</description>
    <label>SAV</label>
</RecordType>