hubSide/force-app/main/default/objects/Case/recordTypes/Sinistre.recordType-meta.xml
<RecordType>
    <fullName>Sinistre</fullName>
    <active>true</active>
    <businessProcess>Sinistre</businessProcess>
    <label>Sinistre</label>
</RecordType>