hubSide/force-app/main/default/objects/Case/recordTypes/SinistreBApp.recordType-meta.xml
<RecordType>
    <fullName>SinistreBApp</fullName>
    <active>true</active>
    <businessProcess>Sinistre BApp</businessProcess>
    <description>Sinistre in progress in BApp</description>
    <label>SinistreBApp</label>
</RecordType>