hubSide/force-app/main/default/objects/Case/recordTypes/SinistreReadOnly.recordType-meta.xml
<RecordType>
    <fullName>SinistreReadOnly</fullName>
    <active>true</active>
    <businessProcess>Sinistre</businessProcess>
    <label>Sinistre clôturé</label>
</RecordType>