hubSide/force-app/main/default/objects/Case/validationRules/ChangeOwnerForbidden.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeOwnerForbidden</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(OwnerId),
Record_Type_Name__c = &apos;Sinistre&apos;, 
AND(NOT(ISPICKVAL(Status, &apos;A attribuer&apos;)), NOT(ISPICKVAL(Status, &apos;Reception_dossier&apos;))),
AND(
 $Profile.Name &lt;&gt; &apos;Administrateur système&apos;,
 NOT(ISPICKVAL($User.BusinessProfile__c, &apos;ManagerGS&apos;))

))</errorConditionFormula>
    <errorMessage>Vous n&apos;avez pas le droit de changer le propriétaire du sinistre.</errorMessage>
</ValidationRule>