hubSide/force-app/main/default/objects/Case/validationRules/TCCantChangeStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>TCCantChangeStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Status ), 
Record_Type_Name__c = &apos;Affectation document&apos;,
ISPICKVAL($User.BusinessProfile__c,&apos;AgentTC&apos;))</errorConditionFormula>
    <errorMessage>Vous n&apos;avez pas le droit d&apos;éditer le statut .</errorMessage>
</ValidationRule>