hubSide/force-app/main/default/objects/Case/validationRules/TypologyCantBeChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>TypologyCantBeChanged</fullName>
    <active>true</active>
    <description>La typologie du sinistre ne peut être modifiée que par les GS (et les admin)
The case&apos;s typology can only be edited by GS (and admin) users,</description>
    <errorConditionFormula>AND(
    $Profile.Name != &apos;SFAM GS&apos;,
    $Profile.Name != &apos;System Administrator&apos;,
    $Profile.Name != &apos;Administrateur système&apos;,
    ISCHANGED(Typologie_Sinistre__c), 
    Record_Type_Name__c == &apos;Sinistre&apos;
)</errorConditionFormula>
    <errorDisplayField>Typologie_Sinistre__c</errorDisplayField>
    <errorMessage>Merci de ne pas modifier la typologie du sinistre.</errorMessage>
</ValidationRule>