hubSide/force-app/main/default/objects/Case/validationRules/VR_CSE_BlockChangeStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CSE_BlockChangeStatus</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	RecordType.Name =&apos;Sinistre&apos;,
	ISCHANGED(Status),
	ISPICKVAL( Status ,&quot;En cours d&apos;indemnisation&quot;), 
	$Profile.Name = &apos;SFAM TC&apos;,
	OR(
		TECH_NumberAlertRejected__c  &gt; 0,
		TECH_NumberAlertWaiting__c &gt; 0
	)
)</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas mettre à jour le statut du sinistre, il est en attente de validation par le gestionnaire</errorMessage>
</ValidationRule>