hubSide/force-app/main/default/objects/Case/validationRules/VRClaimAnswerNature.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimAnswerNature</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name =&apos;Réclamation&apos;,
NOT(OR((ISPICKVAL( Status ,&apos;Attribué&apos;)),(ISPICKVAL( Status ,&apos;Open&apos;)))),
ISBLANK(TEXT(AnswerNature__c))
)</errorConditionFormula>
    <errorDisplayField>AnswerNature__c</errorDisplayField>
    <errorMessage>Une nature de réponse doit obligatoirement être sélectionnée avant de passer le statut de la réclamation à &apos;En attente rappel TC&apos;.</errorMessage>
</ValidationRule>