hubSide/force-app/main/default/objects/Case/validationRules/VRClaimClassification.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimClassification</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name =&apos;Réclamation&apos;,
NOT(OR((ISPICKVAL( Status ,&apos;Attribué&apos;)),(ISPICKVAL( Status ,&apos;Open&apos;)))),
ISBLANK(TEXT(Classification__c))
)</errorConditionFormula>
    <errorDisplayField>Classification__c</errorDisplayField>
    <errorMessage>Une classification doit obligatoirement être sélectionnée avant de passer le statut de la réclamation à &apos;En attente rappel TC&apos;.</errorMessage>
</ValidationRule>