hubSide/force-app/main/default/objects/Case/validationRules/VRClaimContactChannel.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimContactChannel</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name =&apos;Réclamation&apos;, ISPICKVAL( CanalChannel__c , &apos;&apos; ))</errorConditionFormula>
    <errorDisplayField>CanalChannel__c</errorDisplayField>
    <errorMessage>Un canal de contact doit être sélectionné.</errorMessage>
</ValidationRule>