hubSide/force-app/main/default/objects/Case/validationRules/VRClaimContactPhone.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimContactPhone</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name =&apos;Réclamation&apos;,
ISPICKVAL( CanalChannel__c , &apos;Phone&apos; ),
ISBLANK(  ContactPhone__c  ))</errorConditionFormula>
    <errorDisplayField>ContactPhone__c</errorDisplayField>
    <errorMessage>Un numéro de téléphone doit être saisi lorsque la valeur Téléphone est sélectionnée comme canal de contact.</errorMessage>
</ValidationRule>