hubSide/force-app/main/default/objects/Case/validationRules/VRClaimDateBeforeDeclaration.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimDateBeforeDeclaration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Date_sinistre__c),
Record_Type_Name__c = &apos;Sinistre&apos;, 
Date_sinistre__c &gt; ClientDeclarationValidationDate__c  
)</errorConditionFormula>
    <errorDisplayField>Date_sinistre__c</errorDisplayField>
    <errorMessage>La date du sinistre ne doit pas être supérieur à la date de déclaration du client</errorMessage>
</ValidationRule>