hubSide/force-app/main/default/objects/Case/validationRules/VRClaimEmailContact.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimEmailContact</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name =&apos;Réclamation&apos;,
ISPICKVAL( CanalChannel__c , &apos;Email&apos; ),
ISBLANK( Email_Contact__c ))</errorConditionFormula>
    <errorDisplayField>Email_Contact__c</errorDisplayField>
    <errorMessage>Une adresse Email doit être saisie lorsque la valeur Email est sélectionnée comme canal de contact.</errorMessage>
</ValidationRule>