hubSide/force-app/main/default/objects/Case/validationRules/VRClaimeSinisterMissing.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimeSinisterMissing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name =&apos;Réclamation&apos;,
ISBLANK(AssociatedSinister__c),
ISPICKVAL( Theme__c , &apos;Sinister&apos;))</errorConditionFormula>
    <errorDisplayField>AssociatedSinister__c</errorDisplayField>
    <errorMessage>Un sinistre doit être sélectionné lorsque le thème &apos;Sinistre&apos; est sélectionné.</errorMessage>
</ValidationRule>