hubSide/force-app/main/default/objects/Case/validationRules/VRClaimJustifiedRequest.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimJustifiedRequest</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name =&apos;Réclamation&apos;,
NOT(OR((ISPICKVAL( Status ,&apos;Attribué&apos;)),(ISPICKVAL( Status ,&apos;Open&apos;)))),
ISBLANK(TEXT(  JustifiedRequest__c  ))
)</errorConditionFormula>
    <errorDisplayField>JustifiedRequest__c</errorDisplayField>
    <errorMessage>Une valeur doit obligatoirement être sélectionnée pour le champ &apos;Demande justifiée&apos; avant de passer le statut de la réclamation à &apos;En attente rappel TC&apos;.</errorMessage>
</ValidationRule>