hubSide/force-app/main/default/objects/Case/validationRules/VRClaimSinister.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimSinister</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name =&apos;Réclamation&apos;,
NOT(ISBLANK(AssociatedSinister__c)),
NOT(ISPICKVAL( Theme__c , &apos;Sinister&apos;)))</errorConditionFormula>
    <errorDisplayField>AssociatedSinister__c</errorDisplayField>
    <errorMessage>Un sinistre ne peut être associé à une réclamation que lorsque le thème &apos;Sinistre&apos; est sélectionné.</errorMessage>
</ValidationRule>