hubSide/force-app/main/default/objects/Case/validationRules/VRClaimSinisterTypology.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimSinisterTypology</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name =&apos;Réclamation&apos;,
NOT(OR((ISPICKVAL( Status ,&apos;Attribué&apos;)),(ISPICKVAL( Status ,&apos;Open&apos;)))),
NOT(ISBLANK( AssociatedSinister__c )), 
ISBLANK(TEXT(Typologie_Sinistre__c))
)</errorConditionFormula>
    <errorDisplayField>Typologie_Sinistre__c</errorDisplayField>
    <errorMessage>Une typologie de sinistre doit obligatoirement être sélectionnée avant de passer le statut de la réclamation à &apos;En attente rappel TC&apos; lorsque un sinistre est associé à la réclamation.</errorMessage>
</ValidationRule>