hubSide/force-app/main/default/objects/Case/validationRules/VRClaimSolution.validationRule-meta.xml
<ValidationRule>
    <fullName>VRClaimSolution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name =&apos;Réclamation&apos;,
NOT(OR((ISPICKVAL( Status ,&apos;Attribué&apos;)),(ISPICKVAL( Status ,&apos;Open&apos;)))),
ISBLANK(TEXT( Resolution__c ))
)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Une résolution doit obligatoirement être sélectionnée avant de passer le statut de la réclamation à &apos;En attente rappel TC&apos;.</errorMessage>
</ValidationRule>