hubSide/force-app/main/default/objects/Case/validationRules/VRNewClaimStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>VRNewClaimStatus</fullName>
    <active>true</active>
    <description>Le statut d&apos;une nouvelle réclamation ne peut être que &apos;Ouvert&apos;</description>
    <errorConditionFormula>AND(
RecordType.Name =&apos;Réclamation&apos;,
ISNEW(),
NOT(ISPICKVAL( Status ,&apos;Open&apos;))
)</errorConditionFormula>
    <errorMessage>Le statut d&apos;une nouvelle réclamation ne peut être que &apos;Ouvert&apos;</errorMessage>
</ValidationRule>