hubSide/force-app/main/default/objects/Case/listViews/Affectation_document_non_traitees.listView-meta.xml
<ListView>
    <fullName>Affectation_document_non_traitees</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.EMAIL</columns>
    <columns>Email_Subject__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Typologie_Sinistre__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Affectation_document</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>En attente d&apos;affectation</value>
    </filters>
    <label>Affectations document non traitées</label>
    <queue>Dispatch_GED</queue>
</ListView>