hubSide/force-app/main/default/objects/Case/listViews/Affectations_documents_non_traites_backup.listView-meta.xml
<ListView>
    <fullName>Affectations_documents_non_traites_backup</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.STATUS</columns>
    <columns>CreatedDateBAppl__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Affectation_document</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>En attente d&apos;affectation</value>
    </filters>
    <label>Affectation documents non traités Backup</label>
</ListView>