hubSide/force-app/main/default/objects/Case/listViews/Alert_Level1_Case.listView-meta.xml
<ListView>
    <fullName>Alert_Level1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Alert Level1</label>
    <queue>Alert_Level1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>