hubSide/force-app/main/default/objects/Case/listViews/ClaimDispatch.listView-meta.xml
<ListView>
    <fullName>ClaimDispatch</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Réclamation,Demande</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Dispatch Réclamation</label>
    <queue>GestionnaireQualite</queue>
</ListView>