hubSide/force-app/main/default/objects/Case/listViews/Declaration_Web.listView-meta.xml
<ListView>
    <fullName>Declaration_Web</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>closed_repaired</value>
    </filters>
    <label>Déclaration Web</label>
</ListView>