hubSide/force-app/main/default/objects/Case/listViews/Dispatch_ADM_Case.listView-meta.xml
<ListView>
    <fullName>Dispatch_ADM_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Dispatch ADM</label>
    <queue>Dispatch_ADM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>