hubSide/force-app/main/default/objects/Case/listViews/Dispatch_Back_up_Case.listView-meta.xml
<ListView>
    <fullName>Dispatch_Back_up_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Dispatch Back-up</label>
    <queue>Dispatch_Back_up</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>