hubSide/force-app/main/default/objects/Case/listViews/Dispatch_GED_Case.listView-meta.xml
<ListView>
    <fullName>Dispatch_GED_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Dispatch GED</label>
    <queue>Dispatch_GED</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>