hubSide/force-app/main/default/objects/Case/listViews/Dispatch_SAV.listView-meta.xml
<ListView>
    <fullName>Dispatch_SAV</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.SAV</value>
    </filters>
    <label>Dispatch SAV</label>
</ListView>