hubSide/force-app/main/default/objects/Case/listViews/Dispatch_sinistre_Case.listView-meta.xml
<ListView>
    <fullName>Dispatch_sinistre_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Dispatch Sinistre</label>
    <queue>Dispatch_sinistre</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>