hubSide/force-app/main/default/objects/Case/listViews/Dispatch_teleconseiller_Case.listView-meta.xml
<ListView>
    <fullName>Dispatch_teleconseiller_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Dispatch Téléconseiller</label>
    <queue>Dispatch_teleconseiller</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>